--- a/kunskapskontroll_1/kunskapskontroll_1_house_prices.ipynb
+++ b/kunskapskontroll_1/kunskapskontroll_1_house_prices.ipynb
@@ -26,15 +26,16 @@
     "\n",
     "**More specifially, do the following:**\n",
     "1. A short EDA (Exploratory Data Analysis) of the housing data set.\n",
-    "2. Drop the column \"ocean_proximity\", then you only have numeric columns which will simplify your analysis. Remember, this is a POC! \n",
-    "3. You have missing values in your data (not sure you do but you can assume so). Handle this with [ SimpleImputer(strategy=\"median\") ], check the fantastic Scikit-learn documentation for details. Notice, the SimpleImputer should only be used for transformation on the validation and test data. Not fitting.\n",
-    "4. Split your data into train, validation and test set. Before this, split your data into y and X. \n",
-    "5. Create one \"Linear Regression\" model and one \"Lasso\" model. For the Lasso model, use GridSearchCV to optimize $\\alpha$ values, choose yourself which $\\alpha$ values to evaluate.\n",
+    "2. Drop the column `ocean_proximity`, then you only have numeric columns which will simplify your analysis. Remember, this is a POC! \n",
+    "3. You have missing values in your data (not sure you do but you can assume so). Handle this with `SimpleImputer(strategy=\"median\")`. (Check the fantastic Scikit-learn documentation for details.) Notice, the `SimpleImputer` should only be used for transformation on the validation and test data, not fitting.\n",
+    "4. Split your data into `X` and `y`, and then into train, validation and test sets. \n",
+    "5. Create one `LinearRegression` model and one `Lasso` model. For the `Lasso` model, use `GridSearchCV` to optimize $\\alpha$ values. Choose yourself which $\\alpha$ values to evaluate.\n",
     "Use RMSE as a metric to decide which model to choose. \n",
     "\n",
     "6. Which model is best on the validation data? \n",
     "\n",
-    "7. Evaluate your chosen model on the test set using the root mean squared error (RMSE) as the metric. Conclusions? To be 100% right, you should re-fit your chosed model on the combination of train+val data. \n",
+    "7. Evaluate your chosen model on the test set using the root mean squared error (RMSE) as the metric. \n",
+    "What are your conclusions? Note: to be 100% sure, you should re-fit your chosen model on the combination of train+val data. \n",
     "\n",
     "8. Do a short presentation (~ 2-5 min) on your POC that you present to your colleagues (no need to prepare anything particular, just talk from the code). Think of:\n",
     "- What do you want to highlight/present?\n",
@@ -42,7 +43,7 @@
     "- What could be the next step? Is the POC convincing enough or is it not worthwile continuing? Do we need to dig deeper into this before taking some decisions?\n",
     "\n",
     "------------\n",
-    "Bonus question for those who have time and are ambitious: Redo everything above (copy your code) but in step 2, include the column \"ocean_proximity\" which is a categorical column. "
+    "Bonus question for those who have time and are ambitious: Redo everything above (copy your code) but in step 2, include the column `ocean_proximity` which is a categorical column. "
    ]
   },
   {
@@ -82,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Below, set your own path where you have stored the data file. \n",
-    "housing = pd.read_csv(r'C:\\Users\\Antonio Prgomet\\Documents\\03_nbi_yh\\korta_yh_kurser\\python_för_ai\\delkurs_2\\house_prices\\housing.csv')"
+    "# Below, set your own path where you have stored the data file if it is not in the /data folder. \n",
+    "housing = pd.read_csv(r'data/housing.csv')"
    ]
   },
   {
@@ -100,6 +101,68 @@
    "id": "6aeeb407-92b9-4ed3-bcdc-89198b82edfa",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8fae163",
+   "metadata": {},
+   "source": [
+    "## Preparing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74c59056",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a66dbc2",
+   "metadata": {},
+   "source": [
+    "## Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e18b60a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc2be2f",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8414e00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "128a5959",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4208ba68",
+   "metadata": {},
    "source": []
   }
  ],
