--- a/l1/regression_code_example.ipynb
+++ b/l1/regression_code_example.ipynb
@@ -10,14 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "fbb5aff5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns; sns.set_theme()\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import root_mean_squared_error"
    ]
   },
   {
@@ -25,7 +28,7 @@
    "id": "295e9e28",
    "metadata": {},
    "source": [
-    "Assume we have data, where y = salary and X is a matrix containing two columns, the first column shows how many years the person has studied and the second columns shows how many years of experience the person has. "
+    "Assume we have data, where `y` = salary and `X` is a matrix containing two columns, the first column shows how many years the person has studied and the second columns shows how many years of experience the person has. "
    ]
   },
   {
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b33d4797",
    "metadata": {},
    "outputs": [],
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "1ff117df",
    "metadata": {},
    "outputs": [
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "41982030",
    "metadata": {},
    "outputs": [],
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "3ff36fa2",
    "metadata": {},
    "outputs": [],
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "98dd2345",
    "metadata": {},
    "outputs": [
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7425e1d6",
    "metadata": {},
    "outputs": [
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "66fc700b",
    "metadata": {},
    "outputs": [],
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "922bc812",
    "metadata": {},
    "outputs": [
@@ -158,7 +161,7 @@
        "array([50070.42528287])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,21 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b82fb0ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'copy_X': True,\n",
-       " 'fit_intercept': False,\n",
-       " 'n_jobs': None,\n",
-       " 'normalize': 'deprecated',\n",
-       " 'positive': False}"
+       "{'copy_X': True, 'fit_intercept': False, 'n_jobs': None, 'positive': False}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6e0d0889",
    "metadata": {},
    "outputs": [
@@ -221,28 +220,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1263.49523572137\n"
+      "1263.495235721369\n"
      ]
     }
    ],
    "source": [
-    "# Hyperparameter squared=False gives the root mean squared error. \n",
-    "print(mean_squared_error(y_true, y_pred, squared=False))"
+    "print(root_mean_squared_error(y_true, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7fe7589b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1263.49523572137"
+       "np.float64(1263.495235721369)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
