--- a/l1/regression_code_example.ipynb
+++ b/l1/regression_code_example.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "fbb5aff5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns; sns.set_theme()\n",
     "\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "b33d4797",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "1ff117df",
    "metadata": {},
    "outputs": [
@@ -77,7 +78,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
+   "id": "6b2510e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>years_studied</th>\n",
+       "      <th>years_experience</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>33000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>28000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   years_studied  years_experience  salary\n",
+       "0              5                 2   34000\n",
+       "1              3                 4   31000\n",
+       "2              2                 7   33000\n",
+       "3              0                10   28000"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X, columns=[\"years_studied\", \"years_experience\"])\n",
+    "df[\"salary\"] = y_true\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "41982030",
    "metadata": {},
    "outputs": [],
@@ -88,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "3ff36fa2",
    "metadata": {},
    "outputs": [],
@@ -99,19 +180,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "98dd2345",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5909.67616075 2900.89738588]\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(lin_reg.coef_)\n",
     "print(lin_reg.intercept_)"
@@ -119,19 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7425e1d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "predictions [35350.1755755  29332.61802575 32125.63402263 29008.97385876]\n",
-      "true y [34000 31000 33000 28000]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Predicting the train data.\n",
     "y_pred = lin_reg.predict(X)\n",
@@ -151,23 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "922bc812",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([50070.42528287])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_new = np.array([[7, 3]])\n",
+    "X_new = np.array([[7, 3], [2, 9], [6, 1]])\n",
     "y_pred_new = lin_reg.predict(X_new)\n",
     "y_pred_new"
    ]
@@ -182,21 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b82fb0ed",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'copy_X': True, 'fit_intercept': False, 'n_jobs': None, 'positive': False}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Look at hyperparameters, we used all the default values in this case. \n",
     "lin_reg.get_params()"
@@ -212,39 +253,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6e0d0889",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1263.495235721369\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(root_mean_squared_error(y_true, y_pred))"
+    "root_mean_squared_error(y_true, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7fe7589b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(1263.495235721369)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calulating the root mean squared error manually. \n",
     "(np.mean(((y_pred - y_true)**2)))**0.5"
