uppdaterade regression-exempel

--- a/l1/regression_code_example.ipynb
+++ b/l1/regression_code_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "fbb5aff5",
    "metadata": {},
    "outputs": [],
@@ -37,12 +37,12 @@
    "id": "9d6a09ba",
    "metadata": {},
    "source": [
-    "# Estimating a simple linear regression model."
+    "## Estimating a simple linear regression model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "b33d4797",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "1ff117df",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "6b2510e9",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "3              0                10   28000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,18 +158,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "41982030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Initialize the model. \n",
+    "# 1. Initialize the model.\n",
     "lin_reg = LinearRegression(fit_intercept=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "id": "043b5b6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Initialize the model.\n",
+    "lin_reg_intercept = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "3ff36fa2",
    "metadata": {},
    "outputs": [],
@@ -180,10 +191,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98dd2345",
+   "execution_count": 19,
+   "id": "d6e7271f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 2. Fit the model. \n",
+    "lin_reg_intercept = lin_reg_intercept.fit(X, y_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "98dd2345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5909.67616075 2900.89738588]\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(lin_reg.coef_)\n",
     "print(lin_reg.intercept_)"
@@ -191,14 +222,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "ee728e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3370.96774194 1387.09677419]\n",
+      "15096.774193548408\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lin_reg_intercept.coef_)\n",
+    "print(lin_reg_intercept.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6e464f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35350.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 * 5909.7 + 2 * 2901"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "612d4a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34725.97"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15096.77 + 5 * 3371 + 2 * 1387.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "7425e1d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions [35350.1755755  29332.61802575 32125.63402263 29008.97385876]\n",
+      "true y [34000 31000 33000 28000]\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Predicting the train data.\n",
     "y_pred = lin_reg.predict(X)\n",
+    "\n",
     "print('predictions', y_pred)\n",
+    "print('true y', y_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7e5ad163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions [34725.80645161 30758.06451613 31548.38709677 28967.74193548]\n",
+      "true y [34000 31000 33000 28000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Predicting the train data.\n",
+    "y_pred_intercept = lin_reg_intercept.predict(X)\n",
+    "\n",
+    "print('predictions', y_pred_intercept)\n",
     "print('true y', y_true)"
    ]
   },
@@ -214,10 +340,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "922bc812",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50070.42528287, 37927.42879438, 38358.95435037])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_new = np.array([[7, 3], [2, 9], [6, 1]])\n",
     "y_pred_new = lin_reg.predict(X_new)\n",
@@ -253,12 +390,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6e0d0889",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1263.495235721369"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "root_mean_squared_error(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9594fa88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "952.500952501429"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_mean_squared_error(y_true, y_pred_intercept)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "06773663",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1263.495235721369)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.mean((y_pred - y_true)**2))**.5"
    ]
   },
   {
