--- a/l3_kategorisk_data/categorial_data_pandas.ipynb
+++ b/l3_kategorisk_data/categorial_data_pandas.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0c0e17f5",
+   "metadata": {},
+   "source": [
+    "# Kategorisk data i pandas\n",
+    "\n",
+    "## *OBS* Den här notebooken finns kvar av historiska skäl men titta hellre i kategorisk_data.ipynb."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "05cdbae7-901b-4669-b8aa-225449a3c525",
@@ -97,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
