--- a/l3_kategorisk_data/categorical_data_sklearn.ipynb
+++ b/l3_kategorisk_data/categorical_data_sklearn.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Categorical Data\n",
     "\n",
+    "## *OBS* Den här notebooken finns kvar av historiska skäl men titta hellre i kategorisk_data.ipynb.\n",
+    "\n",
     "Read this link before looking at the code: https://machinelearningmastery.com/one-hot-encoding-for-categorical-data/ \n",
     "\n",
     "In this code demonstration, we look at categorical data. \n",
@@ -281,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
