lade till övning

--- a/l3_kategorisk_data/kategorisk_data.ipynb
+++ b/l3_kategorisk_data/kategorisk_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "7be2ccac",
    "metadata": {},
    "outputs": [],
@@ -28,109 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7a446dd4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Customer_ID</th>\n",
-       "      <th>Satisfaction_Level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Customer_ID Satisfaction_Level\n",
-       "0            1                Low\n",
-       "1            2             Medium\n",
-       "2            3               High\n",
-       "3            4                Low\n",
-       "4            5               High\n",
-       "5            6             Medium\n",
-       "6            7             Medium\n",
-       "7            8                Low\n",
-       "8            9               High\n",
-       "9           10             Medium"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "customer_satisfaction = pd.DataFrame({\n",
     "    \"Customer_ID\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
@@ -158,30 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "303e84a7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.],\n",
-       "       [1.],\n",
-       "       [2.],\n",
-       "       [0.],\n",
-       "       [2.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [0.],\n",
-       "       [2.],\n",
-       "       [1.]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ordinal_encoder = OrdinalEncoder(categories=[[\"Low\", \"Medium\", \"High\"]])\n",
     "ordinal_encoder.fit_transform(customer_satisfaction[[\"Satisfaction_Level\"]])"
@@ -199,21 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e0c2108a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array(['Low', 'Medium', 'High'], dtype=object)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ordinal_encoder.categories_"
    ]
@@ -228,23 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9235db81",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['Medium'],\n",
-       "       ['Low'],\n",
-       "       ['High']], dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ordinal_encoder.inverse_transform(np.array([[1], [0], [2]]))"
    ]
@@ -269,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "id": "c1486815",
    "metadata": {},
    "outputs": [
@@ -346,7 +203,7 @@
        "7       BMW"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,8 +212,18 @@
     "# One-Hot Encoding: Car Brands\n",
     "cars = pd.DataFrame({\n",
     "    \"Car_Brand\": [\"Toyota\", \"Ford\", \"Honda\", \"BMW\", \"Toyota\", \"Ford\", \"Honda\", \"BMW\"]\n",
-    "})\n",
+    "}, dtype=\"category\")\n",
     "cars\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47930494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars[\"Car_Brand\"]"
    ]
   },
   {
@@ -373,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "e445a6ca",
    "metadata": {},
    "outputs": [
@@ -390,7 +257,7 @@
        "       [1., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "eee2774b",
    "metadata": {},
    "outputs": [
@@ -527,7 +394,7 @@
        "7              1               0                0                 0       BMW"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "id": "7e894d1c",
    "metadata": {},
    "outputs": [
@@ -564,13 +431,42 @@
        "[array(['BMW', 'Ford', 'Honda', 'Toyota'], dtype=object)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "onehot_encoder.categories_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd3e40a",
+   "metadata": {},
+   "source": [
+    "Eftersom vi gjorde om `Car_Brand`-kolumnen till `category` kan vi komma åt kategorierna även i vår `DataFrame`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "989f14f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BMW', 'Ford', 'Honda', 'Toyota'], dtype='object')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars[\"Car_Brand\"].cat.categories"
    ]
   },
   {
@@ -601,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 76,
    "id": "8b7a823c",
    "metadata": {},
    "outputs": [
@@ -705,7 +601,7 @@
        "7               0                0                 0       BMW"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "id": "da7c2f03",
    "metadata": {},
    "outputs": [
@@ -745,7 +641,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 78,
    "id": "781fe985",
    "metadata": {},
    "outputs": [
@@ -775,7 +671,7 @@
        "[array(['BMW', 'Ford', 'Honda', 'Toyota'], dtype=object)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
