--- a/l4/ice_cream.ipynb
+++ b/l4/ice_cream.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "def load_icecream_sales():\n",
     "    df = pd.read_csv(\"ice_cream_selling_data.csv\")\n",
-    "    X = df.iloc[:, 0].to_numpy().reshape(-1, 1)\n",
+    "    X = df.iloc[:, 0]\n",
     "    y = df.iloc[:, 1]\n",
     "    return X, y\n",
     "\n",
