--- a/l4/polynomial_regression.ipynb
+++ b/l4/polynomial_regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "rng = np.random.default_rng(seed=42)\n",
     "\n",
     "X = (5 * rng.random(m,) - 2)\n",
-    "y = 4 + 3 * X**2 + 5 * X + rng.random(m) * 8  # Nonlinear relationship + noise"
+    "y = 4 + 3 * X**2 + 5 * X + rng.random(m) * 4  # Nonlinear relationship + noise"
    ]
   },
   {
@@ -87,6 +87,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(X_reshaped[:, 0] == X_reshaped.reshape(-1)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x = np.linspace(-2, 3, m) # Linjär data för att plotta en linje\n",
     "\n",
     "sns.scatterplot(x=X, y=y, alpha=.8, s=25)\n",
@@ -99,7 +108,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cross_val_score(m1, X_reshaped, y).mean()"
+    "cross_val_score(m1, X_reshaped, y, scoring=\"neg_root_mean_squared_error\").mean() * -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.mean()"
    ]
   },
   {
@@ -115,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ 13.2 + 7.2x $"
+    "$ y = 13.2 + 7.2x $"
    ]
   },
   {
@@ -170,6 +188,25 @@
    "source": [
     "m2.named_steps[\"linearregression\"].intercept_, m2.named_steps[\"linearregression\"].coef_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Riktiga: $y =  4 + 3x^2 + 5x + \\epsilon$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "m2: $y = 8.2 + 2.9x^2 + 4.8x $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
