--- a/l4/polynomial_regression.ipynb
+++ b/l4/polynomial_regression.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,17 @@
     "rng = np.random.default_rng(seed=42)\n",
     "\n",
     "X = (5 * rng.random(m,) - 2)\n",
-    "y = 4 + 3 * X**2 + 5 * X + rng.random(m) * 4  # Nonlinear relationship + noise"
+    "y = 4 + 3 * X**2 + 5 * X + rng.random(m) * 8  # Nonlinear relationship + noise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ 4 + 3x^2 + 5x + \\epsilon$"
+    "Den ickelinjära funktionen ser ut såhär:\n",
+    "\n",
+    "\n",
+    "$y = 4 + 3x^2 + 5x + \\epsilon$"
    ]
   },
   {
