lade till genomgång om svm och mnist-eda

--- a/l4/ice_cream.ipynb
+++ b/l4/ice_cream.ipynb
@@ -9,7 +9,7 @@
     "* Kör cellen nedan för att ladda in datan.\n",
     "* Dela upp datan i träning- och testset.\n",
     "* Gör en EDA.\n",
-    "* Använd valfria *preprocessing*-steg och träna en valfri regressionsmodell på datan. Se hur låg RMSE du kan nå!"
+    "* Använd valfria *preprocessing*-steg och träna en eller flera valfria regressionsmodeller på datan. Se hur låg RMSE du kan nå!"
    ]
   },
   {
