--- a/l5/mnist_svm.ipynb
+++ b/l5/mnist_svm.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "edad8d44",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
    "id": "a881c43d",
    "metadata": {},
    "source": [
-    "# Creating a function that will be used later"
+    "Vi definierar en funktion för att visualisera våra *confusion matrices* senare."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e01968a",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,12 @@
    "id": "304489e0",
    "metadata": {},
    "source": [
-    "# Downloading the data and inspecting it"
+    "Vi hämtar MNIST-datasetet och kollar dess beskrivning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c9ff6a66",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "mnist = fetch_openml('mnist_784', version=1, cache=True, as_frame=False)\n",
     "\n",
     "X = mnist[\"data\"]\n",
-    "y = mnist[\"target\"].astype(np.uint8)"
+    "y = mnist[\"target\"]"
    ]
   },
   {
@@ -82,12 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(mnist.DESCR)"
+    "from IPython.display import Markdown\n",
+    "display(Markdown(mnist.DESCR))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "de365ac4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
     "# Plotting the features of the X data, it looks like a 5.\n",
     "some_digit = X[0]\n",
     "some_digit_image = some_digit.reshape(28, 28)\n",
-    "plt.imshow(some_digit_image, cmap=mpl.cm.binary)\n",
+    "plt.imshow(some_digit_image, cmap=plt.get_cmap(\"binary\"))\n",
     "# plt.axis(\"off\")"
    ]
   },
@@ -309,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
